[package]
name = "rust_todo_app"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-rt = "2"
actix-web = "4"
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0" 
async-std = "1.10"
env_logger = "0.10.0"
log = "0.4"
sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres"] }
